# python-uv-template

./: .actrc  .agent-config.yml  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.example  AGENTMASTER.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LOCAL_TESTING.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt
.claude/: settings.json
.claude/hooks/: sessionStart.sh
.claude/prompts/: AGENT_MASTER_PROMPT.md
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  claude_task.yml  feature_request.yml
.github/workflows/: .env.local.example  README.md  auto-fix-gemini.yml  auto-fix.yml  benchmark.yml  ci.yml  claude-code.yml  coding-agent.yml  docs.yml  release.yml
benchmarks/: README.md  __init__.py  benchmark_calculator.py  conftest.py
docs/: AGENT_ABSTRACTION.md  AGENT_SETUP_GUIDE.md  GH_PR_STRICT_SETUP.md  GITHUB_ACTIONS_INTEGRATION.md  HOOKS.md  Makefile  api_reference.rst  conf.py  contributing.rst  examples.rst  getting_started.rst  index.rst
examples/: README.md  basic_usage.ipynb
scripts/: README.md  gemini_autofix.py  process_data.py
src/: __init__.py  calculator.py  math_utils.py
src/agent_abstraction/: __init__.py  base_agent.py  claude_code.py  codex.py  config.py  copilot.py  factory.py  gemini.py  swe_agent.py
tests/: __init__.py  conftest.py  test_agent_abstraction.py  test_calculator.py  test_math_utils.py
